GDHI-UI Fixed alignment issue <Sonia>

--- a/src/assets/stylesheets/components/country-profile/_country-profile.scss
+++ b/src/assets/stylesheets/components/country-profile/_country-profile.scss
@@ -156,7 +156,7 @@
       margin-right: 4px;
       height: 100px;
       float: left;
-      margin-bottom: 5px;
+      margin-bottom: 3px;
     }
     .country-summary-link {
       color: $link-blue;
